[package]
name = "rsomics-cophenet"
version = "0.1.0"
description = "Cophenetic distances and cophenetic correlation coefficient from a hierarchical linkage matrix — value-exact vs scipy.cluster.hierarchy.cophenet"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-cophenet"
authors = ["Zane Leong <efd@live.com>"]

[[bin]]
name = "rsomics-cophenet"
path = "src/main.rs"

[lib]
name = "rsomics_cophenet"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "bench"
harness = false
